<resources>
    <string name="app_name">Medical App</string>
    <string name="loading">Loading ...</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="to_continue_login_now">To Continue , Login Now</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot">Forget Password ?</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birth_date">29-03-2004</string>
    <string name="address2">Mansoura , Shirben</string>
    <string name="single">Single</string>
    <string name="Employee">Employee</string>
    <string name="tasks">Tasks</string>
    <string name="reports">Reports</string>
    <string name="attendance_leaving">attendance_leaving</string>
    <string name="user_name">user_name</string>
    <string name="my_profile">My Profile</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">E-mail</string>
    <string name="required">Required</string>
    <string name="please_select_gender">please select gender</string>
    <string name="specialist_hint">please select specialist</string>
    <string name="birthday_hint">please select birthday</string>
    <string name="status_hint">please select status</string>
    <string name="wrong_email_address">wrong email address format</string>
    <string name="select_date">select date</string>
    <string name="patient_name">Patient Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="age">age</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="send_call">Send Call</string>
    <string name="create_user">Create User</string>

</resources>