<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/second_top_guideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17099863" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02189781" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />


    <ImageView
        android:id="@+id/img_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/logo"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@id/left_guideLine"
        app:layout_constraintTop_toBottomOf="@+id/top_guideLine"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/user_name"
        android:textSize="@dimen/_13sdp"

        app:layout_constraintStart_toEndOf="@id/img_user"
        app:layout_constraintTop_toTopOf="@id/img_user" />

    <TextView
        android:id="@+id/textUserDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="user details"
        android:textColor="@color/font_color"
        android:textSize="@dimen/_11sdp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="@+id/text_username"
        app:layout_constraintStart_toStartOf="@+id/text_username"
        app:layout_constraintTop_toBottomOf="@id/text_username" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/notification"
        android:layout_marginEnd="@dimen/_3sdp"
        app:layout_constraintBottom_toBottomOf="@id/text_username"
        app:layout_constraintEnd_toStartOf="@id/right_guideLine"
        app:layout_constraintTop_toTopOf="@id/text_username" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalls"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#5F9EDC"
        android:text="Calls"
        app:cornerRadius="@dimen/_8sdp"
        android:textSize="@dimen/_11sdp"
        app:icon="@drawable/hr_person__1_"
        app:iconSize="@dimen/_50sdp"
        app:iconGravity="textTop"
        app:layout_constraintEnd_toStartOf="@+id/btn_tasks"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_top_guideLine"
        app:layout_constraintWidth_percent="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#5FDC89"
        android:text="@string/tasks"
        app:cornerRadius="@dimen/_8sdp"
        app:icon="@drawable/check"
        app:iconSize="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toEndOf="@+id/btnCalls"
        app:iconGravity="textTop"
        app:layout_constraintTop_toTopOf="@id/second_top_guideLine"
        app:layout_constraintWidth_percent="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reports"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#915FDC"
        android:text="@string/reports"
        app:cornerRadius="@dimen/_8sdp"
        app:icon="@drawable/files"
        app:iconSize="@dimen/_50sdp"
        app:iconGravity="textTop"
        app:layout_constraintEnd_toStartOf="@+id/btn_f_print"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintTop_toBottomOf="@id/btnCalls"
        app:layout_constraintWidth_percent="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_f_print"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#5FDCDC"
        android:text="@string/attendance_leaving"
        app:cornerRadius="@dimen/_8sdp"
        app:icon="@drawable/finger_print"
        app:iconSize="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toEndOf="@+id/btn_reports"
        app:layout_constraintTop_toBottomOf="@id/btn_tasks"
        app:iconGravity="textTop"
        app:layout_constraintWidth_percent="0.45" />


</androidx.constraintlayout.widget.ConstraintLayout>